[gd_scene load_steps=3 format=3 uid="uid://krse23lt50kg"]

[ext_resource type="Script" path="res://ui/card_ui.gd" id="1_htste"]
[ext_resource type="Theme" uid="uid://b4yti0oqt7xi0" path="res://themes/card.tres" id="1_k0nao"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(220, 260)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1700.0
offset_bottom = -820.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k0nao")
script = ExtResource("1_htste")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.215686, 0.215686, 0.658824)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CardNameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 2

[node name="FateCostLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="CardTypeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AbilitiesContainer" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3
